--- a/sobre.html
+++ b/sobre.html
@@ -13,6 +13,7 @@
         integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="media/logo.ico">
 </head>
 
 <body>
@@ -88,6 +89,34 @@
         </div>
     </div>
 
+
+    <hr>
+
+
+    <div class="intro-block">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-3">
+                    <img class="img-responsive tpad" src="media/imagens/Autor.jpg">
+                </div>
+                <h1><span class="text-muted">Autor.</span></h1>
+            </div>
+        </div>
+    </div>
+    </div>
+
+
+    <div class="container-fluid">
+        <div class="row mt-5">
+            <div class="col">
+                <p class="lead">
+                    O meu nome é <b>João Antunes</b>, e sou apaixonado por tecnologias de computação. Desde cedo, sempre
+                    me fascinou a forma como a tecnologia pode transformar o mundo e criar soluções inovadoras para os
+                    desafios do dia a dia. Essa paixão levou-me a aprofundar os meus conhecimentos e a dedicar-me a esta
+                    área e explorar constantemente novas ferramentas, linguagens e metodologias.
+            </div>
+        </div>
+    </div>
 
 
 
