--- a/cursos.html
+++ b/cursos.html
@@ -18,6 +18,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="media/logo.ico">
 </head>
 
 <body>
